# extractreq

./: .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  README.md  README.rst  TROUBLESHOOTING.md  app.py  extractionRequirement.ipynb  main.py  modul_partof.ipynb  modul_partof_(ekspart).ipynb  modul_similarity.ipynb  modul_ucd.ipynb  modul_wordEmbed.ipynb  nltk.txt  partof_2005Grid3D.ipynb  partof_modul1.py  partof_modul2.py  partof_modul2a.py  pyproject.toml  requirements.txt  setup.py  transformerIndo.ipynb
CHANGELOG/: index.html
TROUBLESHOOTING/: index.html
data/: IRCI_Researcher.xmi  IRCI_Topic.xmi  data_aksi_aktor.xlsx  data_relasi.xlsx  data_xmi.xlsx  dataset_2.xlsx  dataset_2_split.xlsx  freqs_Topic.txt  freqs_researcher.txt  rAnalyzerUC.xmi  ranalyzerucd_create_new_project.txt  ranalyzerucd_func.txt  ranalyzerucd_open_existing_project.txt  researcher_insert_metadata.txt  researcher_search_researcher.txt  topic_insert_metadata.txt  topic_search_article.txt  wsd_groundtruth.xlsx
docs/: authors.rst  conf.py  detail.rst  hist.rst  history.rst  index.rst  install.rst  kontribusi.md  readme.rst  standard  usage.rst  version history.rst
docs/models/: models.rst
docs/standard/: index.html
docs/tutorials/: tutorial.rst
notebook/: README.md  modul_ekscase_rev1.1.ipynb  modul_ekscase_rev1.2.ipynb  modul_ekspart_rev1.3.ipynb  modul_ekspart_rev1.4.ipynb
reference/extractreq/: index.html
requirements/: pip.txt
site/: index.html
site/search/: search_index.json
src/extarctreq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+22 files in other folders)
